[package]
name = "reapfrog"
version = "0.3.0"
authors = ["The 8472", "namibj", "SteveGremory"]
description = "Readahead and dropbehind over multiple files"
keywords = ["linux", "ext4", "macos"]
repository = "https://github.com/SteveGremory/reapfrog"
readme = "README.md"
categories = ["filesystem"]
license = "MPL-2.0"

include = [
    "**/*.rs",
    "README.md",
    "LICENCE",
    "Cargo.toml",
]


[dependencies]
libc = "0.2.22"
